# upspeak

./: .editorconfig  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.sh  go.mod  go.sum  main.go  upspeak.sample.yaml
.claude/: settings.json
.github/: copilot-instructions.md
api/: envelope.go  http.go  middleware.go
app/: README.md  app.go  app_lifecycle_test.go  app_test.go  config.go  config_test.go  module_path_test.go  module_test.go  nats.go  nats_test.go  shutdown_test.go
archive/: annotation_store.go  annotation_store_test.go  archive.go  edge_store.go  edge_store_test.go  filter_store.go  filter_store_test.go  job_store.go  job_store_test.go  local.go  node_store.go  node_store_test.go  repo_store.go  repo_store_test.go  resolve.go  resolve_test.go  schema.go  sequences.go  thread_store.go  thread_store_test.go
core/: README.md  annotation.go  archive.go  core.go  edge.go  edge_test.go  edge_types.go  edge_types_test.go  errors.go  event_graph.go  event_graph_test.go  events.go  filter.go  identity.go  identity_test.go  job.go  list.go  node.go  node_test.go  node_types.go  node_types_test.go  repo.go  shared_types.go  thread.go  thread_test.go  version.go
filter/: engine.go  engine_test.go  filter.go
jobs/: jobs.go  runner.go
nats/: consumer.go  consumers.go  nats.go  nats_test.go  publisher.go  streams.go  subscriber.go
repo/: README.md  handlers_annotation.go  handlers_edge.go  handlers_entity.go  handlers_node.go  handlers_repo.go  handlers_test.go  handlers_thread.go  repo.go  repo_test.go
(+50 files in other folders)
